--- a/luis/mapa_municipio_global/Chile.css
+++ b/luis/mapa_municipio_global/Chile.css
@@ -215,6 +215,7 @@ Custom scrollbar leyenda
 .legendCustom{
     max-height: 130px;
     overflow: auto;
+    max-width: 280px;
 }
 
 .legendCustom::-webkit-scrollbar {
