--- a/luis/bases/mainMulti_vigilancia/style/base.css
+++ b/luis/bases/mainMulti_vigilancia/style/base.css
@@ -158,6 +158,7 @@ Custom scrollbar leyenda
     max-height: 130px;
     overflow: auto;
     max-width: 300px;
+    min-width: 200px;
 }
 
 .legendCustom::-webkit-scrollbar {
@@ -367,6 +368,9 @@ Minimizar
  .leaflet-control-layers-list {
     background-color: white !important;
   }*/
+  .leaflet-marker-icon{
+    z-index: 999999999 !important;
+  }
 
 
 
