--- a/luis/bases/mainMulti/style/base.css
+++ b/luis/bases/mainMulti/style/base.css
@@ -72,6 +72,7 @@ html, body, #mapid {
 /**/
 
 #menu {
+    top:2vh;
     font-family: Arial;
     font-size: 12.5px;
     text-align: center;
@@ -80,7 +81,7 @@ html, body, #mapid {
     width: 100%;
     left: 0px; /*A la derecha deje un espacio de 0px*/
     right: 0px; /*A la izquierda deje un espacio de 0px*/
-    bottom: 0px; /*Abajo deje un espacio de 0px*/
+    /*bottom: 0px; Abajo deje un espacio de 0px*/
 }
 
 #menu ul li {
@@ -94,6 +95,7 @@ html, body, #mapid {
     width: 11%;
     border-radius: 5px;
     cursor: pointer;
+    
 }
 
 #menu ul li:hover {
@@ -111,22 +113,24 @@ html, body, #mapid {
 }
 */
 
-#comunaID{
-    color: #FFF;
-    background-color: black;
+
+/*
+.comunaID{
+    color: white;
+    background-color: #03a7ab;
     margin: 10px;
     font-weight: bold;
     font-size: 1rem !important;
-    
-    
+}*/
+
+.leaflet-top{
+    color: white !important;
+    font-weight: 100;
+    font-size: 1rem !important;
 }
 
-.comunaID{
-    color: #FFF;
-    background-color: black;
-    margin: 10px;
-    font-weight: bold;
-    font-size: 1rem !important;
+.leaflet-right span{
+    color: white ;
 }
 
 .test > .leaflet-control-layers-selector{
@@ -150,9 +154,11 @@ html, body, #mapid {
 Custom scrollbar leyenda
 */
 .legendCustom{
+    overflow-x: hidden !important;
     max-height: 130px;
     overflow: auto;
     max-width: 300px;
+    min-width: 200px;
 }
 
 .legendCustom::-webkit-scrollbar {
@@ -320,5 +326,52 @@ Minimizar
 .leaflet-control-attribution .leaflet-control{
     width: 20px !important;
 }
+
+
+#butonComunas{
+    margin: 5%;
+    margin-left: 10%;
+    display:flex;
+    justify-content: right;
+    align-items: right;
+    /*width: 50%;
+    margin-left: auto;*/
+    font-size: 0.8rem !important;
+}
+
+
+.variableLeyenda{
+    cursor: pointer !important;
+    /*
+    font-size: xx-large;
+    */ 
+}
+
+.variableLeyenda .tooltiptext {
+    visibility: hidden !important;
+    width: 120px !important;
+    background-color: black !important;
+    color: #fff !important;
+    text-align: center !important;
+    border-radius: 6px !important;
+    padding: 5px 0 !important;
+  
+    /* Position the tooltip */
+    position: absolute !important;
+    z-index: 1 !important;
+  }
+
+  .variableLeyenda:hover .tooltiptext {
+    visibility: visible !important;
+  }
+/*
+ .leaflet-control-layers-list {
+    background-color: white !important;
+  }*/
+  .leaflet-marker-icon{
+    z-index: 999999999 !important;
+  }
+
+
 
 
