--- a/luis/bases/mainMulti_educacionempresa/style/base.css
+++ b/luis/bases/mainMulti_educacionempresa/style/base.css
@@ -408,6 +408,12 @@ hr{
     border: 1px solid black !important;
     margin: 0 !important;
 }
+/*
+.proyeccion_edad{
+  text-align: justify;
+  margin-left: 20%;
+}
+*/
 
 
   
